# inventree-gallery-plugin

./: README.md  pyproject.toml
inventree_gallery_plugin/: __init__.py  gallery.py
inventree_gallery_plugin/templates/gallery/: gallery.html
tests/: test_inventree_gallery_plugin.py
